@@ -1,6 +1,8 @@
 48.alpha - DEVEL
 ==========================
 
+- Use GtkStack and its animations for the number_picker, play/pause
+  and fullscreen/unfullscreen buttons
 - Port to blueprints
 - Includes changes from 47.1
 
